# Machine-Learning-Engineering-with-Python-Second-Edition

.github/workflows/: github-actions-basic.yml
Chapter01/: requirements.txt
Chapter01/clustering/: clustering_example.py  taxi-labels.json  taxi-rides.csv
Chapter01/forecasting/: forecasting_example.py
Chapter02/mleng-with-python/: pyproject.toml
